# english-dictionary

./: .gitignore  Record.py  all.list  graphs.py  index.html.wu  parse-websters-txt.py  parsing.py  readme.wu  saurav.txt.py  setup.cfg  stopwords.json.py  stopwords.py  test.list  test.tests  websters-agg-fix.txt.py  websters-agg-p0-para.txt.pat  websters-agg-p1-pre.txt.pat  websters-agg-p2-misc.txt.pat  websters-agg-p2-parse.txt.pat  websters-agg-pN-misc.txt.pat  websters-agg.txt.py  websters-basic.json.py  websters-basics.json.py  websters-check-etym.py  websters-entities-map.json.py  websters-entities.json.py  websters-entities.txt.py  websters-lines.txt.py  websters-names.txt.py  websters-p-misc.txt.pat  websters-p0-structure.txt.pat  websters-p1-gram.txt.pat  websters-p1-pre.txt.pat  websters-p2-etym.txt.pat  websters-p2-parse.txt.pat  websters-p3-misc.txt.pat  websters-p3-names.txt.pat  websters-p4-content.txt.pat  websters-para-lines.txt.py  websters-parse-check.py  (+17 more)
typestubs/networkx/: __init__.pyi  convert.pyi  (+1 more)
wb/: agg.txt.py  basics.json.py  entities.json.py  entities.txt.py  micra-webfont-entities.json  p-misc.txt.pat  p0-para.txt.pat  p1-pre.txt.pat  p2-parse.txt.pat  p3-names.txt.pat  p4-content.txt.pat  para-lines.txt.py  parse-check.py  parsing.py  raw-lines.txt.py  scan.jsons.py  tag-counts.txt.py  word-sets-graph-ins.jsonl.py  word-sets-graph-outs.jsonl.py  word-sets-graph.graph.py  word-sets-ins.jsonl.py  word-sets-max-scc-facts.txt.py  word-sets-max-scc.graph.py  word-sets-outs.jsonl.py  word-sets-scc-sizes.csv.py  word-sets.jsonl.py  word-sets.jsons.py
(+33 files in other folders)
