# Dedicated to the public domain under CC0: https://creativecommons.org/publicdomain/zero/1.0/.

[metadata]
name = politics
version = 0.0.0
license = All rights reserved.
author = George King
author_email = george.w.king@gmail.com
url = https://gitlab.com/gwk/politics
description = Political social media analysis.

[build]
build-base = _build

[sdist]
dist-dir = _build

[mypy]
python_version = 3.7
cache_dir = _build/mypy_cache
check_untyped_defs = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = False
ignore_missing_imports = False
show_column_numbers = True
show_none_errors = True
strict_optional = True
warn_incomplete_stub = True
warn_no_return = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_configs = True
warn_unused_ignores = True
